# daw

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  BUILDING.md  CMakeLists.txt  MVP.md  README.md  tile.md
.github/workflows/: build.yml
src/: Main.cpp  MainComponent.cpp  main.cpp  main_component.cpp  main_component.h
tests/: main_test.cpp
